
 - sourceforge logo can optionally be suppressed in gendoc by
   passing sourceforge_logo=False to gendoc.gendoc

 - draw_text works again (thanks to S\oren Bjerregaard Vrist)

 - new page segmentation plugin bbox_merging

 - extensions in kdtree:
    o new method set_distance for dimension weighting
    o k_nearest_neighbors now supports an optional search predicate

 - corrected slider display in Biollante

 - fixed errors in draw_hollow_rect and knn_editing


Version 3.2.0, Jun 17, 2009
----------------------------

 - plugins to_numpy and from_numpy added for support of numpy;
   the deprecated numeric and numarry modules have been replaced with numpy

 - highlight also works with GREYSCALE and ONEBIT images

 - corrected resize function in VIGRA

 - the knn classifier can now return different confidence
   measures for the main id that are selectable by the
   user. See the classifier API documentation for details.

 - knn classifier now works as expected when k > 1;
   up to now, id_name was sorted by confidence, which meant
   that always the farthest among the k nearest neighbors
   was returned as main_id

 - now compiles with Python 2.6 (thanks to Prapat Suriyaphol)


Version 3.1.2, Apr 14, 2009
----------------------------

 - fixed an infinite loop in classifier dialog on Windows

 - new module KdTree for fast two dimensional searches

 - now also builds out-of-the box on FreeBSD (thanks to David Blewett)

 - new plugin median() in category "List"
   also available on the C++ side as a template in listutilities.hpp

 - new C++ wrapper class canonicPyObject in gameramodule.hpp to make
   PyObject* usable in STL container classes, e.g. vector<canonicPyObject>

 - fixed problem with weak image references in classifier dialog

 - Don't show right-click menu when there is no shell


Version 3.1.1, Jun 09, 2008
---------------------------

 - new plugin textline_reading_order() in category "Page Segmentation"
